<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DSE LS</string>
    <string name="app_title">iScore DSE Practice</string>
    <string name="start">Start</string>
    <string name="subject">Subject:</string>
    <string name="paper_ref">Paper Ref:</string>
    <string name="number_of_questions">No. of Questions:</string>
    <string name="allowed_time">Allowed Time:</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_text">&#8226; Choose one of A, B, C or D as answer.\n
&#8226; Can change your selected choice.\n
&#8226; [Next Q] to next question, [Back] to go back.\n
&#8226; Internet MUST be *** TURNE ON ***</string>
	<string name="back">Back</string>
	<string name="next_q">Next Q</string>
	<string name="results">Results</string>
	<string name="user_input_format">User Input [%1$s]</string>
	<string name="score_card">Score Card</string>
	<string name="score">Score:</string>
	<string name="wrong">Wrong:</string>
	<string name="unanswered">Unanswered:</string>
	<string name="paper_total">Paper Total:</string>
	<string name="start_new">To start new test, pls press press bak icon on navigation bar</string>
	<string name="loading_quiz_list">Loading quiz list</string>
	<string name="error">Error</string>
	<string name="quiz_list_empty">Quiz list is empty</string>
	<string name="loading_quiz_intro">Loading quiz intro</string>
	<string name="loading_quiz_data">Loading quiz data</string>
	<string name="quiz_empty">No data for this quiz</string>
	<string name="paper_today">Paper today:</string>
	<string name="watermark">&#169; 2013 LSC Limited. All Rights Reserved.</string>

</resources>